@@ -9,6 +9,7 @@
 #include "tao/Any_Impl.h"
 #include "tao/SystemException.h"
 
+#include "ace/SString.h"
 #include "ace/Containers_T.h"
 #include "ace/Hash_Map_Manager_T.h"
 #include "ace/Null_Mutex.h"
@@ -188,7 +189,7 @@ TAO_TypeCodeFactory_i::create_union_tc (
               raw_default_index = i;
               // Only the multiple labels that come before the
               // default label affect its adjusted value.
-              default_index = ACE_static_cast (CORBA::Long, i - dups);
+              default_index = static_cast<CORBA::Long> (i - dups);
             }
         }
       else
@@ -561,7 +562,7 @@ TAO_TypeCodeFactory_i::create_recursive_tc (
   // value -1 goes where the TCKind would go for any
   // other embedded typecode.
   CORBA::TCKind rec_kind =
-    ACE_static_cast (CORBA::TCKind, max_neg);
+    static_cast<CORBA::TCKind> (max_neg);
 
   return this->assemble_tc (cdr,
                             rec_kind,
@@ -1504,12 +1505,10 @@ TAO_TypeCodeFactory_i::update_map (
   )
 {
   ptrdiff_t unaligned_offset =
-    ACE_static_cast (ptrdiff_t,
-                     cdr.total_length ());
+    static_cast<ptrdiff_t> (cdr.total_length ());
 
   CORBA::Long aligned_offset =
-    ACE_static_cast (CORBA::Long,
-                     ACE_align_binary (unaligned_offset,
+    static_cast<CORBA::Long> (ACE_align_binary (unaligned_offset,
                                        sizeof (CORBA::Long)));
 
   CORBA::TypeCode::OFFSET_MAP *member_offset_map = member_tc->offset_map ();
@@ -1522,11 +1521,10 @@ TAO_TypeCodeFactory_i::update_map (
   // For anything except the immediate product of create_recursive_tc,
   // the insertion of a member will include an encap length.
   CORBA::Long member_encap_len_bytes =
-    member_tc->kind_ == ~0 ? 0 : ACE_static_cast (CORBA::Long,
-                                                  sizeof (CORBA::Long));
+    member_tc->kind_ == ~0 ? 0 : static_cast<CORBA::Long> (sizeof (CORBA::Long));
 
   CORBA::Long tc_kind_bytes =
-    ACE_static_cast (CORBA::Long, sizeof (CORBA::TCKind));
+    static_cast<CORBA::Long> (sizeof (CORBA::TCKind));
 
   for (CORBA::TypeCode::OFFSET_MAP_ITERATOR iter (*member_offset_map);
        ! iter.done ();
@@ -1572,8 +1570,7 @@ TAO_TypeCodeFactory_i::update_map (
           else
             {
               const char *slot =
-                member_tc->buffer_ + ACE_static_cast (ptrdiff_t,
-                                                      *list_entry);
+                member_tc->buffer_ + static_cast<ptrdiff_t> (*list_entry);
 
               CORBA::Long recursion_offset =
                 -1 * (aligned_offset
@@ -1584,24 +1581,18 @@ TAO_TypeCodeFactory_i::update_map (
                       + tc_kind_bytes);             // Top level TCKind.
 
 #if !defined (ACE_ENABLE_SWAP_ON_WRITE)
-              *ACE_reinterpret_cast (CORBA::Long *,
-                                     ACE_const_cast (char *,
-                                                     slot)) =
+              *reinterpret_cast<CORBA::Long *> (const_cast<char *> (slot)) =
                 recursion_offset;
 #else
               if (! cdr.do_byte_swap ())
                 {
-                  *ACE_reinterpret_cast (CORBA::Long *,
-                                         ACE_const_cast (char *,
-                                                         slot)) =
+                  *reinterpret_cast<CORBA::Long *> (const_cast<char *> (slot)) =
                     recursion_offset;
                 }
               else
                 {
-                  ACE_CDR::swap_4 (ACE_reinterpret_cast (char *,
-                                                         &recursion_offset),
-                                   ACE_const_cast (char *,
-                                                   slot));
+                  ACE_CDR::swap_4 (reinterpret_cast<char *> (&recursion_offset),
+                                   const_cast<char *> (slot));
                 }
 #endif /* ACE_ENABLE_SWAP_ON_WRITE */
             }
